两数求和 - 调整代码为批量验证内存对算法耗时的影响